--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,7 +3,7 @@
     <%- include('dropdown', {dropdownId: "resourcesSideNav"}); %>
 
     <div class="nav-wrapper green lighten-1">
-        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#!" class="brand-logo"><img src="/images/logo-1.png"></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <%- include('nav-content', {datatarget: "resourcesRegular", sideNav: false}); %>
