--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,18 +1,23 @@
-img {
-    height: 64px;
+nav {
+    margin-top: 50px;
 }
 
-.brand-logo {
-    margin-left: 10px;
+img.logo {
+    height: 150px;
+    margin-top: -50px;
+}
+
+ul.main {
+    display: flex;
+    justify-content: center;
+}
+
+nav .nav-wrapper ul a.no-hover:hover {
+    background-color: transparent; 
 }
 
 @media only screen and (max-width: 600px) {
-    img {
-     height: 56px;
+    nav {
+      margin-top: 0;
     }
-
-    .brand-logo {
-        margin-left: 10px;
-    }
-
   }
