--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,17 +1,21 @@
 <nav>
-    <%- include('dropdown', {dropdownId: "resourcesRegular"}); %>
-    <%- include('dropdown', {dropdownId: "resourcesSideNav"}); %>
-
     <div class="nav-wrapper green lighten-1">
-        <a href="#!" class="brand-logo"><img src="/images/logo-1.png"></a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-            <%- include('nav-content', {datatarget: "resourcesRegular", sideNav: false}); %>
+        <ul class="main center hide-on-small-only">
+            <li><a href="#">Leagues</a></li>
+            <li><a href="#">Franchise</a></li>
+            <a href="" class="no-hover"><img class="logo" src="/images/logo-1.png"></a>
+            <li><a href="#">Join</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <%- include('nav-content', {datatarget: "resourcesSideNav", sideNav: true}); %>
+    <li><a href="#" class="green-text text-lighten-1">Leagues</a></li>
+    <li><a href="#" class="green-text text-lighten-1">Franchise</a></li>
+    <li><a href="#" class="green-text text-lighten-1">Join</a></li>
+    <li><a href="#" class="green-text text-lighten-1">About Us</a></li>
+    <li><a href="#" class="green-text text-lighten-1">Contact Us</a></li>
 </ul>
