--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <div class="nav-wrapper green lighten-1">
+    <div class="nav-wrapper green darken-3">
         <ul class="main center hide-on-small-only">
             <li><a href="#">Leagues</a></li>
             <li><a href="#">Franchise</a></li>
@@ -13,9 +13,9 @@
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a href="#" class="green-text text-lighten-1">Leagues</a></li>
-    <li><a href="#" class="green-text text-lighten-1">Franchise</a></li>
-    <li><a href="#" class="green-text text-lighten-1">Join</a></li>
-    <li><a href="#" class="green-text text-lighten-1">About Us</a></li>
-    <li><a href="#" class="green-text text-lighten-1">Contact Us</a></li>
+    <li><a href="#" class="green-text text-darken-3">Leagues</a></li>
+    <li><a href="#" class="green-text text-darken-3">Franchise</a></li>
+    <li><a href="#" class="green-text text-darken-3">Join</a></li>
+    <li><a href="#" class="green-text text-darken-3">About Us</a></li>
+    <li><a href="#" class="green-text text-darken-3">Contact Us</a></li>
 </ul>
