--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,9 @@
     <!-- Navigation -->
     <%- include('includes/navbar'); %>
     
+    <!-- Slider -->
+    <%- include('includes/slider'); %>
+
     <!-- jquery functions for materialize -->
     <%- include('includes/jquery')%>
     
