--- a/views/includes/jquery.ejs
+++ b/views/includes/jquery.ejs
@@ -1,6 +1,10 @@
 <script>
     $(document).ready(function(){
         $('.sidenav').sidenav();
-        $(".dropdown-trigger").dropdown();
+        $(".dropdown-trigger").dropdown();  
+        $('.slider').slider({
+            indicators: false,
+            interval: 5000
+        });   
     });
 </script>
