--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,14 +1,18 @@
 <nav>
     <div class="nav-wrapper green darken-3">
         <ul class="main center hide-on-small-only">
-            <li><a href="#">Leagues</a></li>
-            <li><a href="#">Franchise</a></li>
+            <div class="first">
+                <li><a href="#">Leagues</a></li>
+                <li><a href="#">Franchise</a></li>
+            </div>
             <a href="" class="no-hover"><img class="logo" src="/images/logo-1.png"></a>
-            <li><a href="#">Join</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <div class="second">
+                <li><a href="#">Join</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </div>
         </ul>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger hide-on-med-and-up"><i class="material-icons">menu</i></a>
     </div>
 </nav>
 
