--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -5,7 +5,7 @@
                 <li><a href="#">Leagues</a></li>
                 <li><a href="#">Franchise</a></li>
             </div>
-            <a href="" class="no-hover"><img class="logo" src="/images/logo-1.png"></a>
+            <a href="" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
             <div class="second">
                 <li><a href="#">Join</a></li>
                 <li><a href="#">About</a></li>
