--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,8 +15,8 @@
     <!-- Navigation -->
     <%- include('includes/navbar'); %>
     
-    <!-- Slider -->
-    <%- include('includes/slider'); %>
+    <!-- Full Width Image -->
+    <%- include ('includes/fullWidthImage'); %>
 
     <!-- jquery functions for materialize -->
     <%- include('includes/jquery')%>
