initial what we do section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,13 @@
     <%- include ('includes/fullWidthImage'); %>
 
     <!-- jquery functions for materialize -->
-    <%- include('includes/jquery')%>
-    
+    <%- include('includes/jquery'); %>
+
+    <!-- What We Do section -->
+    <%- include('includes/whatWeDo'); %>
+
+    <!--Our Program section -->
+    <%- include('includes/ourProgram'); %>
+
 </body>
 </html>
