--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: -apple-system, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 nav {
     margin-top: 50px;
 }
@@ -44,6 +48,17 @@ nav .nav-wrapper ul a.no-hover:hover {
     width: 10rem;
 }
 
+.whatWeDo .card {
+    min-height: 200px;
+}
+
+.whatWeDo .row {
+    margin-top: 50px;
+}
+
+.container {
+    padding: 50px 0;
+}
 
 @media only screen and (max-width: 600px) {
     nav {
