--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -7,8 +7,8 @@
             </div>
             <a href="" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
             <div class="second">
-                <li><a href="#">Join</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Join Us</a></li>
+                <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </div>
         </ul>
