--- a/views/includes/whatWeDo.ejs
+++ b/views/includes/whatWeDo.ejs
@@ -1,28 +1,30 @@
-<div class="container whatWeDo">
-    <h3 class="center-align">WHAT WE DO</h3>
-    <div class="row">
-        <div class="col s12 l4">
-            <div class="card green lighten-2">
-                <div class="card-content">
-                    <span class="center-align card-title white-text">Developement</span>
-                    <p class="center-align white-text">Best in class mobile app</p>
-                </div>  
+<div class="whatWeDo">
+    <div class="container">
+        <h3 class="center-align">WHAT WE DO</h3>
+        <div class="row">
+            <div class="col s12 l4">
+                <div class="card green lighten-2">
+                    <div class="card-content">
+                        <span class="center-align card-title white-text">Developement</span>
+                        <p class="center-align white-text">Best in class mobile app</p>
+                    </div>  
+                </div>
             </div>
-        </div>
-        <div class="col s12 l4">
-            <div class="card green">
-                <div class="card-content">
-                    <span class="center-align card-title activator white-text">Technology</span>
-                    <p class="center-align white-text">Best in class mobile app</p>
-                </div>  
+            <div class="col s12 l4">
+                <div class="card green">
+                    <div class="card-content">
+                        <span class="center-align card-title activator white-text">Technology</span>
+                        <p class="center-align white-text">Best in class mobile app</p>
+                    </div>  
+                </div>
             </div>
-        </div>
-        <div class="col s12 l4">
-            <div class="card green darken-2">
-                <div class="card-content">
-                    <span class="center-align card-title activator white-text">Social Good</span>
-                    <p class="center-align white-text">Impact lives in the nation we serve</p>
-                </div>  
+            <div class="col s12 l4">
+                <div class="card green darken-2">
+                    <div class="card-content">
+                        <span class="center-align card-title activator white-text">Social Good</span>
+                        <p class="center-align white-text">Impact lives in the nation we serve</p>
+                    </div>  
+                </div>
             </div>
         </div>
     </div>
