--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,5 +27,8 @@
     <!--Our Program section -->
     <%- include('includes/ourProgram'); %>
 
+    <!-- Our Leagues Section -->
+    <%- include('includes/ourLeagues'); %>
+    
 </body>
 </html>
