--- a/views/includes/ourProgram.ejs
+++ b/views/includes/ourProgram.ejs
@@ -45,5 +45,8 @@
                 </div>
             </div> 
         </div>
+        <div class="row button">
+            <button class="btn-large green lighten-1 waves-effect">Learn More</button>
+        </div>
     </div>
 </div>
