added testimonials section ot homepage and created initial carousel for them

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,6 +29,9 @@
 
     <!-- Our Leagues Section -->
     <%- include('includes/ourLeagues'); %>
-    
+
+    <!-- Testimonials -->
+    <%- include('includes/testimonials'); %>
+
 </body>
 </html>
