--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,7 +61,7 @@ nav .nav-wrapper ul a.no-hover:hover {
     min-height: 600px;
 }
 
-.ourProgram .container, .ourLeagues .container {
+.ourProgram .container, .ourLeagues .container, .testimonials .container {
     width: 80%;
 }
 
@@ -100,6 +100,16 @@ img.soccerguy {
 
 .league {
     text-align: center;
+}
+
+.carousel-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-wrapper .material-icons {
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
