--- a/views/includes/jquery.ejs
+++ b/views/includes/jquery.ejs
@@ -2,5 +2,9 @@
     $(document).ready(function(){
         $('.sidenav').sidenav();
         $(".dropdown-trigger").dropdown();    
+        $('.carousel').carousel({
+            indicators: true,
+            fullWidth: true
+        });
     });
 </script>
