--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,22 +16,22 @@
     <%- include('includes/navbar'); %>
     
     <!-- Full Width Image -->
-    <%- include ('includes/fullWidthImage'); %>
-
-    <!-- jquery functions for materialize -->
-    <%- include('includes/jquery'); %>
+    <%- include ('includes/homepage/fullWidthImage'); %>
 
     <!-- What We Do section -->
-    <%- include('includes/whatWeDo'); %>
+    <%- include('includes/homepage/whatWeDo'); %>
 
     <!--Our Program section -->
-    <%- include('includes/ourProgram'); %>
+    <%- include('includes/homepage/ourProgram'); %>
 
     <!-- Our Leagues Section -->
-    <%- include('includes/ourLeagues'); %>
+    <%- include('includes/homepage/ourLeagues'); %>
 
     <!-- Testimonials -->
-    <%- include('includes/testimonials'); %>
+    <%- include('includes/homepage/testimonials'); %>
+
+    <!-- jquery functions for materialize -->
+    <%- include('includes/homepage/jquery'); %>
 
 </body>
 </html>
