refactored our program cards and added button to them for triggering animation

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -112,6 +112,11 @@ img.soccerguy {
     cursor: pointer;
 }
 
+.card-menu {
+    align-self: flex-end;
+    position: absolute;
+} 
+
 @media only screen and (max-width: 600px) {
     nav {
       margin-top: 0;
