quick button fix on our program card

--- a/views/includes/minis/ourProgramCard.ejs
+++ b/views/includes/minis/ourProgramCard.ejs
@@ -1,7 +1,7 @@
 <div class="col s12 l4">
     <div class="card hoverable">
-        <div class="card-content waves-effect waves-green activator">
-            <span class="card-menu card-title green-text text-darken-2"><i class="material-icons">menu</i></span>
+        <div class="card-content">
+            <span class="card-menu card-title green-text text-darken-2 activator"><i class="material-icons">menu</i></span>
             <img class="soccerguy" src="/images/<%= image %>">
             <span class="card-title green-text text-darken-2"><%= title %></span>
         </div>
