--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,6 +23,12 @@
     <!-- Testimonials -->
     <%- include('includes/homepage_sections/testimonials'); %>
 
+    <!-- News -->
+    <%- include('includes/homepage_sections/news'); %>
+
+    <!-- Partners -->
+    <%- include('includes/homepage_sections/partners'); %>
+
     <!-- jquery functions for materialize -->
     <%- include('includes/homepage_sections/jquery'); %>
 
