--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -2,30 +2,24 @@
     <div class="container">
         <h3 class="center-align">WHAT WE DO</h3>
         <div class="row">
-            <div class="col s12 l4">
-                <div class="card green lighten-2">
-                    <div class="card-content">
-                        <span class="center-align card-title white-text">Developement</span>
-                        <p class="center-align white-text">Best in class mobile app</p>
-                    </div>  
-                </div>
-            </div>
-            <div class="col s12 l4">
-                <div class="card green">
-                    <div class="card-content">
-                        <span class="center-align card-title activator white-text">Technology</span>
-                        <p class="center-align white-text">Best in class mobile app</p>
-                    </div>  
-                </div>
-            </div>
-            <div class="col s12 l4">
-                <div class="card green darken-2">
-                    <div class="card-content">
-                        <span class="center-align card-title activator white-text">Social Good</span>
-                        <p class="center-align white-text">Impact lives in the nation we serve</p>
-                    </div>  
-                </div>
-            </div>
+            <%- include('../minis/whatWeDoCard', {
+                title: "Development",
+                image: "soccer.png",
+                text: "Best in class mobile app",
+                color: "lighten-2"
+            }); %> 
+            <%- include('../minis/whatWeDoCard', {
+                title: "Technology",
+                image: "technology.png",
+                text: "Bes tin class mobile app",
+                color: ""
+            }); %> 
+            <%- include('../minis/whatWeDoCard', {
+                title: "Social Good",
+                image: "socialgood.png",
+                text: "Impact lives in the nation we serve",
+                color: "darken-2"
+            }); %> 
         </div>
     </div>
 </div>
