--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,6 +29,9 @@
     <!-- Partners -->
     <%- include('includes/homepage_sections/partners'); %>
 
+    <!-- Contact Us -->
+    <%- include('includes/homepage_sections/contactUs'); %>
+
     <!-- jquery functions for materialize -->
     <%- include('includes/homepage_sections/jquery'); %>
 
