--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <%- include('../minis/ourProgramCard', {
                 title: "Player Centric",
-                image: "soccerguy.png",
+                image: "soccerguy",
                 bullets: [
                     "Fun, Safe, and Engaging",
                     "Interactive",
@@ -13,7 +13,7 @@
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Developement Focused",
-                image: "computerguy.png",
+                image: "computerguy",
                 bullets: [
                     "Nationally recognized soccer leaders",
                     "Small sided games",
@@ -22,7 +22,7 @@
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Revolutionary Technology",
-                image: "cellphone.png",
+                image: "cellphone",
                 bullets: [
                     "User focused",
                     "Targeted developement focussed tools",
@@ -31,7 +31,7 @@
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Open to All",
-                image: "diversity.png",
+                image: "diversity",
                 bullets: [
                     "User focused",
                     "Targeted developement focussed tools",
@@ -40,11 +40,18 @@
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Full Administration Platform",
-                image: "circlePeople.png",
+                image: "circlePeople",
                 bullets: [
                     "Player registration, team management",
                     "Scheduling facilities, referees reporting",
                     "Reporting and feedback training"
+                ]
+            }); %>
+            <%- include('../minis/ourProgramCard', {
+                title: "Social Good",
+                image: "social",
+                bullets: [
+                    "Influencing positive social change"
                 ]
             }); %>
         </div>
