--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<%- include('includes/head'); %>
+<%- include('includes/general/head'); %>
 
 <body>
     
     <!-- Navigation -->
-    <%- include('includes/navbar'); %>
+    <%- include('includes/general/navbar'); %>
     
     <!-- Full Width Image -->
     <%- include ('includes/homepage_sections/fullWidthImage'); %>
