--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -56,7 +56,7 @@
             }); %>
         </div>
         <div class="row button">
-            <button class="btn-large green lighten-1 waves-effect">Learn More</button>
+            <a href="/aboutus" class="btn-large green lighten-1 waves-effect">Learn More</a>
         </div>
     </div>
 </div>
