--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -8,7 +8,7 @@
             <a href="" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
             <div class="second">
                 <li><a href="#">Join Us</a></li>
-                <li><a href="/aboutus">About Us</a></li>
+                <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </div>
         </ul>
