filled out aboutus content

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -1,1 +1,27 @@
-<h1>About Us</h1>
+<!DOCTYPE html>
+<html lang="en">
+    
+<%- include('includes/general/head'); %>
+
+<body>
+    
+    <!-- Navigation -->
+    <%- include('includes/general/navbar'); %>
+
+    <!-- About Us Main-->
+    <%- include('includes/aboutus_sections/main'); %>
+
+    <!-- Our Program section -->
+    <%- include('includes/homepage_sections/ourProgram'); %>
+
+    <!-- More info -->
+    <%- include('includes/aboutus_sections/moreInfo'); %>
+
+    <!-- Contact Us -->
+    <%- include('includes/homepage_sections/contactUs'); %>
+
+    <!-- jquery functions for materialize -->
+    <%- include('includes/homepage_sections/jquery'); %>
+
+</body>
+</html>
