--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -5,10 +5,10 @@
                 <li><a href="#">Leagues</a></li>
                 <li><a href="#">Franchise</a></li>
             </div>
-            <a href="" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
+            <a href="/" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
             <div class="second">
                 <li><a href="#">Join Us</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="/aboutus">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </div>
         </ul>
