--- a/views/includes/content/our_story.ejs
+++ b/views/includes/content/our_story.ejs
@@ -7,4 +7,4 @@ an organized, development focussed program that supplements the vast array of tr
 opportunities that currently exist for U7/U8 players. The deliberate inclusive nature of the 
 program creates a diverse competitive platform for players and teams from all walks of life. 
 The player centric design of the program creates a fun, safe and engaging atmosphere that is 
-driven by development versus results.
+driven by development versus results
