--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -8,6 +8,9 @@
     <!-- Navigation -->
     <%- include('includes/general/navbar'); %>
 
+    <!-- Full Width Image -->
+    <%- include('includes/aboutus_sections/header'); %>
+
     <!-- About Us Main-->
     <%- include('includes/aboutus_sections/main'); %>
 
