--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -212,6 +212,10 @@ nav .nav-wrapper ul a.no-hover:hover {
     justify-content: flex-end;
 }
 
+.ourStory p {
+    font-size: 20px;
+}
+
 @media only screen and (max-width: 600px) {
     nav {
       margin-top: 0;
