--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -20,6 +20,12 @@
     <!-- More info -->
     <%- include('includes/aboutus_sections/technology'); %>
 
+    <!-- Social Good -->
+    <%- include('includes/aboutus_sections/socialGood'); %>
+
+    <!-- Leagues -->
+    <%- include('includes/aboutus_sections/tapinLeagues'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
