--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -26,6 +26,15 @@
     <!-- Leagues -->
     <%- include('includes/aboutus_sections/tapinLeagues'); %>
 
+    <!-- Sponsor -->
+    <%- include('includes/aboutus_sections/sponsor'); %>
+
+    <!-- Palla -->
+    <%- include('includes/aboutus_sections/palla'); %>
+
+    <!-- Our Team -->
+    <%- include('includes/aboutus_sections/ourTeam'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
