started to change ourProgram between the home page and about us page

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -15,7 +15,9 @@
     <%- include('includes/aboutus_sections/ourStory'); %>
 
     <!-- Our Program section -->
-    <%- include('includes/homepage_sections/ourProgram'); %>
+    <%- include('includes/homepage_sections/ourProgram', {
+        home: false
+    }); %>
 
     <!-- More info -->
     <%- include('includes/aboutus_sections/technology'); %>
