--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -110,7 +110,7 @@ nav .nav-wrapper ul a.no-hover:hover {
     
 }
 
-.ourProgram .container, .ourLeagues .container, .testimonials .container, .partners .container {
+.ourProgramHome .container, .ourLeagues .container, .testimonials .container, .partners .container {
     width: 100%;
     min-height: 500px;
 }
@@ -222,9 +222,9 @@ nav .nav-wrapper ul a.no-hover:hover {
     justify-content: flex-end;
 }
 
-.ourStory p, .technology p, .socialGood p, .sponsor p {
+.ourStory p, .technology p, .socialGood p, .sponsor p, .palla p {
     margin-top: 50px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .technology .tapinlogo, .palla .pallalogo {
