--- a/views/includes/minis/ourProgramCard.ejs
+++ b/views/includes/minis/ourProgramCard.ejs
@@ -1,4 +1,4 @@
-<div class="col s12 m6 l4">
+<div class="col s12 l4">
     <div class="card hoverable">
         <div class="card-content">
             <span class="card-menu card-title green-text text-darken-2 activator"><i class="material-icons">menu</i></span>
