--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -8,21 +8,25 @@
             <%- include('../content/technology'); %>
         </p>
         <div class="row phone">
-            <div class="phoneImage col s6">
+            <div class="phoneImage col s12 m6">
                 <img class="phone1" src="/images/phone1.png">
             </div>
-            <ul class="col s6">
+            <ul class="col s12 m6">
                 <li>Age and develpoment appropiate curriculum and coach licensing.</li>
                 <li>Full communication and scheduling tools to keep coaches and players updated in real time.</li>
             </ul>
         </div>
-        <div class="row phone">
-            <ul class="col s6">
-                <li class="right-align">Age and develpoment appropiate curriculum and coach licensing.</li>
-                <li class="right-align">Full communication and scheduling tools to keep coaches and players updated in real time.</li>
-            </ul>
-            <div class="phoneImage2 col s6">
-                <img class="phone2" src="/images/phone2.png">
+    </div>
+    <div class="outergrey grey lighten-2">
+        <div class="container">
+            <div class="row phone">
+                <ul class="col s12 m6">
+                    <li class="right-align">Age and develpoment appropiate curriculum and coach licensing.</li>
+                    <li class="right-align">Full communication and scheduling tools to keep coaches and players updated in real time.</li>
+                </ul>
+                <div class="phoneImage2 col s12 m6">
+                    <img class="phone2" src="/images/phone2.png">
+                </div>
             </div>
         </div>
     </div>
