initial setup of leagues page

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="nav-wrapper green darken-3">
         <ul class="main center hide-on-small-only">
             <div class="first">
-                <li><a href="#">Leagues</a></li>
+                <li><a href="/leagues">Leagues</a></li>
                 <li><a href="#">Franchise</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
