new leagues logos

--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -4,19 +4,19 @@
         <div class="row">
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/logo-draft.png">
-                <h5>GDL</h5>
+                <h5>GDL MA</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/logo-draft.png">
-                <h5>GDL</h5>
+                <img class="leaguesLogo" src="/images/red.png">
+                <h5 class="red-text">GDL RI</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/logo-draft.png">
-                <h5>GDL</h5>
+                <img class="leaguesLogo" src="/images/orange.png">
+                <h5 class="orange-text">GDL NH</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/logo-draft.png">
-                <h5>GDL</h5>
+                <img class="leaguesLogo" src="/images/purple.png">
+                <h5 class="purple-text">GDL ME</h5>
             </div>
         </div>
     </div>
