--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -6,7 +6,7 @@
             <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Program</h5>
         <% } %>
     </div>
-    <div style="padding: 0 10%;">
+    <div style="padding: 50px 10%;">
         <div class="row">
             <%- include('../minis/ourProgramCard', {
                 title: "Player Centric",
