--- a/views/includes/leagues_sections/info.ejs
+++ b/views/includes/leagues_sections/info.ejs
@@ -1,45 +1,48 @@
 <div class="info">
     <div class="container">
-        <div class="row">
-            <div class="title col s12 m6">
-                <p class="bold">Format (2020/2021)</p>  
-            </div>
-            <div class="info col s12 m6">
-                <ul>
-                    <li>U7 AND U8 PLAYERS</li>
-                    <li>7 GAME SEASON</li>
-                    <li>4 FESTIVAL Format</li>
-                    <li>FESTIVALS EVERY OTHER WEEK</li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="title col s12 m6">
-                <p class="bold">Rules</p>
-            </div>
-            <div class="info col s12 m6">
-                <ul>
-                    <li>4X4, NO GK'S</li>
-                    <li>25X35 YDS FIELD, 3X5FT GOALS</li>
-                    <li>1 REFEREE</li>
-                    <li>40 MIN GAMES- 4 QUATERS</li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="title col s12 m6">
-                <p class="bold">Reccomendations</p>
-            </div>
-            <div class="info col s12 m6">
-                <ul>
-                    <li>LIMIT SUBS</li>
-                    <li>BALANCE PLAYING TIME</li>
-                    <li>ROTATE POSITIONS</li>
-                    <li>CONTROL ENVIRONMENT</li>
-                </ul>
-            </div>
-        </div>
+        <table>
+            <tr>
+                <td class="red lighten-2">
+                    <p class="bold">Format</p>
+                    <i class="material-icons">file_download</i>
+                </td>
+                <td class="red lighten-4">
+                    <ul>
+                        <li>U7 AND U8 PLAYERS</li>
+                        <li>7 GAME SEASON</li>
+                        <li>4 FESTIVAL Format</li>
+                        <li>FESTIVALS EVERY OTHER WEEK</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td class="yellow lighten-2">
+                    <p class="bold">Rules</p>  
+                    <i class="material-icons">file_download</i>
+                </td>
+                <td class="yellow lighten-4">
+                    <ul>
+                        <li>4X4, NO GK'S</li>
+                        <li>25X35 YDS FIELD, 3X5FT GOALS</li>
+                        <li>1 REFEREE</li>
+                        <li>40 MIN GAMES- 4 QUATERS</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td class="blue lighten-2">
+                    <p class="bold">Reccomendations</p>
+                    <i class="material-icons">file_download</i>
+                </td>
+                <td class="blue lighten-4">
+                    <ul>
+                        <li>LIMIT SUBS</li>
+                        <li>BALANCE PLAYING TIME</li>
+                        <li>ROTATE POSITIONS</li>
+                        <li>CONTROL ENVIRONMENT</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
