started stickers tables

--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -17,6 +17,9 @@
     <!-- Info -->
     <%- include('includes/leagues_sections/info'); %>
 
+    <!-- Stickers -->
+    <%- include('includes/leagues_sections/stickers'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
