--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -1,4 +1,4 @@
-<div class="palla">
+<div class="stickers">
     <div class="container">
         <h5 class="green-text text-darken-1" style="font-weight: bold;">Stickers</h5>
         <table style="table-layout: fixed;">
@@ -10,38 +10,40 @@
                 <td class="blue">Great Play</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><img class="sticker" src="/images/star.png"></td>
+                <td><img class="sticker" src="/images/heart.png"></td>
+                <td><img class="sticker" src="/images/gear.png"></td>
+                <td><img class="sticker" src="/images/handshake.png"></td>
+                <td><img class="sticker" src="/images/clap.png"></td>
             </tr>
         </table>
         <div class="row">
             <div class="col s6 image">
-                <img src="/images/palla.png" style="height: 200px;">
+                <img src="/images/playercard1.png" style="height: 400px;">
             </div>
             <div class="col s6">
-                <table>
+                <table class="vertical">
                     <tr>
-                        <td>MVP</td>
-                        <td></td>
+                        <td class="orange">MVP</td>
+                        <td>
+                            <img class="sticker" src="/images/star.png">
+                        </td>
                     </tr>
                     <tr>
-                        <td>Hardest Worker</td>
-                        <td></td>
+                        <td class="red">Hardest Worker</td>
+                        <td><img class="sticker" src="/images/heart.png"></td>
                     </tr>
                     <tr>
-                        <td>Best Student</td>
-                        <td></td>
+                        <td class="grey">Best Student</td>
+                        <td><img class="sticker" src="/images/gear.png"></td>
                     </tr>
                     <tr>
-                        <td>Best Sportsman</td>
-                        <td></td>
+                        <td class="green">Best Sportsman</td>
+                        <td><img class="sticker" src="/images/handshake.png"></td>
                     </tr>
                     <tr>
-                        <td>Great Play</td>
-                        <td></td>
+                        <td class="blue">Great Play</td>
+                        <td><img class="sticker" src="/images/clap.png"></td>
                     </tr>
                 </table>
             </div>
