designed out initial testimonials

--- a/views/includes/homepage_sections/jquery.ejs
+++ b/views/includes/homepage_sections/jquery.ejs
@@ -2,7 +2,7 @@
     $(document).ready(function(){
         $('.sidenav').sidenav();
         $(".dropdown-trigger").dropdown();    
-        $('.carousel').carousel({
+        $('.carousel.carousel-slider').carousel({
             indicators: true,
             fullWidth: true
         });
