--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -2,27 +2,37 @@
     <div class="container">
         <h3 class="center-align">Testimonials</h3> 
         <div class="row carousel-wrapper">
-            <i class="large material-icons green-text">chevron_left</i>
             <div class="carousel carousel-slider center">
-                <div class="carousel-item red white-text" href="#one!">
-                  <h2>Testimonial 1</h2>
-                  <p class="white-text">Testimonial 1</p>
-                </div>
-                <div class="carousel-item amber white-text" href="#two!">
-                  <h2>Testimonial 2</h2>
-                  <p class="white-text">Testimonial </p>
-                </div>
-                <div class="carousel-item green white-text" href="#three!">
-                  <h2>Testimonial 3</h2>
-                  <p class="white-text">Testimonial 3</p>
-                </div>
-                <div class="carousel-item blue white-text" href="#four!">
-                  <h2>Testimonial 4</h2>
-                  <p class="white-text">Testimonial 4</p>
-                </div>
+                <div class="carousel-item white" href="#one!">
+                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
+                  <div class="testInfo">
+                    <div class="image"></div>
+                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                </div> 
+                <div class="carousel-item white" href="#two!">
+                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
+                  <div class="testInfo">
+                    <div class="image"></div>
+                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                </div> 
+                <div class="carousel-item white" href="#three!">
+                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
+                  <div class="testInfo">
+                    <div class="image"></div>
+                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                </div> 
+                <div class="carousel-item white" href="#four!">
+                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
+                  <div class="testInfo">
+                    <div class="image"></div>
+                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                </div> 
+                
             </div>
-            <i class="large material-icons green-text">chevron_right</i>
         </div>
-        
     </div>
 </div>
