updated our team icon

--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -3,7 +3,7 @@
         <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Team</h5>
         <div class="row">
             <div class="person col s12 m6 l4">
-                <img class="leaguesLogo" src="/images/tapinlogo1.png">
+                <img class="leaguesLogo" src="/images/steve.png">
                 <p class="name bold">Steve Schecter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
@@ -12,7 +12,7 @@
                 </p>
             </div>
             <div class="person col s12 m6 l4">
-                <img class="leaguesLogo" src="/images/tapinlogo1.png">
+                <img class="leaguesLogo" src="/images/steve.png">
                 <p class="name bold">Steve Schecter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
@@ -21,7 +21,7 @@
                 </p>
             </div>
             <div class="person col s12 m6 l4">
-                <img class="leaguesLogo" src="/images/tapinlogo1.png">
+                <img class="leaguesLogo" src="/images/steve.png">
                 <p class="name bold">Steve Schecter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
