initial setup of franchise page

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -3,7 +3,7 @@
         <ul class="main center hide-on-small-only">
             <div class="first">
                 <li><a href="/leagues">Leagues</a></li>
-                <li><a href="#">Franchise</a></li>
+                <li><a href="/franchise">Franchise</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
             <div class="second">
