--- a/views/franchise.ejs
+++ b/views/franchise.ejs
@@ -11,6 +11,9 @@
     <!-- Full Width Image -->
     <%- include ('includes/franchise_sections/header'); %>
 
+    <!-- Active Franchises -->
+    <%- include('includes/franchise_sections/activeFranchises'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
