--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -1,4 +1,4 @@
-<div class="fullImageAboutUs responsive-img">
+<div class="fullImageFranchise responsive-img">
     <div class="container">
         <div class="row">
             <div class="col s12 m6 content">
@@ -6,7 +6,7 @@
                 <p><%- include('../content/mission_statement'); %></p>
             </div>
             <div class="col s6 image hide-on-small-only">
-                <img class="twoPhones" src="/images/2phones.png">
+                <img class="twoPhones" src="/images/shysoccerkid.png">
             </div>
         </div>
     </div>
